--- a/shop/.env
+++ b/shop/.env
@@ -4,3 +4,8 @@ DB_USER=postgres
 DB_USER_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=5432
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_HOST_USER='almasyaseen18@gmail.com'
+EMAIL_HOST_PASSWORD='fdlyetgkkimqfvnk'
+EMAIL_USE_TLS=True
